# TPE_comparator

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  INTERVIEW_READY_GUIDE.md  Procfile  README.md  docker-compose.yml  history.db  main.py  pyproject.toml  railway.json  requirements.txt  test_complex_insert.py  test_insert.py  test_supabase.py
app/: app.py  config.py  main.py
app/api/: __init__.py  compare.py
app/services/: pdf_report.py  visual_diff.py
backend/: .env.example  __init__.py  app.py  config.py  database.py  supabase_client.py
backend/api/: auth.py  chat.py  compare.py  reports.py  requalifications.py  scope_validator.py
backend/services/: __init__.py  ai_compare.py  diff_engine.py  docx_parser.py  page_aligner.py  pdf_parser.py  pdf_report.py  report_gen.py  scope_matcher.py  text_extractor.py  visual_diff.py
frontend/static/css/: main.css  responsive.css
frontend/static/js/: app.js  auth.js  compare.js  dashboard.js  notifications.js  reports.js  requalifications.js  results.js  scope_validator.js
frontend/templates/: base.html  index.html
frontend/templates/components/: compare.html  dashboard.html  header.html  login.html  modals.html  reports.html  requalifications.html  results.html  scope_validator.html  settings.html  sidebar.html  welcome.html
tests/: compare_test.py  test_api.py  test_compare.py  test_docx.py  test_groq_vision.py  test_matching.py  test_ocr.py  test_png.py  test_trace.py  test_validator.py  verify_highlighting.py
utils/: ai_pdf_compare.py  diff_engine.py  llm_analyzer.py  pdf_parser.py  report_gen.py
